<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:enabled="true"
        android:visible="true">

        <item
            android:id="@+id/motos"
            android:icon="@mipmap/motocicleta"
            android:title="@string/acceder_a_db" />
        <item
            android:id="@+id/informacion"
            android:icon="@mipmap/informa"
            android:title="@string/solicitar_informacion" />
        <item
            android:id="@+id/acceso"
            android:icon="@mipmap/candado"
            android:title="@string/acceso" />

    </group>
</menu>
