<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivDatos"
                android:layout_width="157dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:src="?attr/actionModeBackground" />

            <LinearLayout
                android:layout_width="94dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/cliente"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/marca"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/modelo"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/matricula"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/precio"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="264dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewDatos"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewDatos2"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewDatos3"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewDatos4"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewDatos5"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>